--- a/ansible_web_example/roles/appserver/tasks/main.yml
+++ b/ansible_web_example/roles/appserver/tasks/main.yml
@@ -2,3 +2,6 @@
   yum: pkg={{item}} state=installed
   with_items:
    - java-1.8.0-openjdk
+
+- name: "Deploying Tomcat"
+  shell: wget -qO- http://apache.uvigo.es/tomcat/tomcat-9/v9.0.4/bin/apache-tomcat-9.0.4.tar.gz | tar zxvp -C /var/apache-tomcat
