--- a/ansible_web_example/roles/appserver/handlers/main.yml
+++ b/ansible_web_example/roles/appserver/handlers/main.yml
@@ -1,4 +1,4 @@
 - name: start-tomcat
-  command: /var/apache-tomcat/apache-tomcat-9.0.4/bin/startup.sh
+  command: '/var/apache-tomcat/apache-tomcat-9.0.4/bin/startup.sh'
   become: yes
   become_user: tomcat
