--- a/ansible_get_db_objects/playbook.yml
+++ b/ansible_get_db_objects/playbook.yml
@@ -8,7 +8,7 @@
 
   vars:
         oracle_home: /u01/app/12.2.0/grid
-        hostname: ctsusaoradb01
+        hostname: localhost
         service_name: +ASM
         set_init_mode: sysdba
         set_init_user: sys
