--- a/ansible_get_db_objects/playbook.yml
+++ b/ansible_get_db_objects/playbook.yml
@@ -14,6 +14,7 @@
         set_init_user: sys
         user: sys
         password: ctsusa
+        mode: sysdba
         oracle_env:
                ORACLE_HOME: "{{ oracle_home }}"
                LD_LIBRARY_PATH: "{{ oracle_home }}/lib"
