--- a/ansible_get_db_objects/roles/dbtest/tasks/main.yml
+++ b/ansible_get_db_objects/roles/dbtest/tasks/main.yml
@@ -5,4 +5,6 @@
     service_name: "{{ service_name }}"
     hostname: "{{ hostname }}"
     sql: 'select username from dba_users'
-  environment: oracle_env
+  environment:
+    ORACLE_HOME: /u01/app/oracle/product/12.2.0/dbhome_1
+    LD_LIBRARY_PATH: /u01/app/oracle/product/12.2.0/dbhome_1/lib
