--- a/ansible_oracle_getdump/roles/dbpro/tasks/main.yml
+++ b/ansible_oracle_getdump/roles/dbpro/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: "Export data pump"
-  shell: expdp "{{ user }}"/"{{ PRO_password }}"@"{{ PRO_service_name }}" directory="{{ PRO_dpump_dir }}" dumpfile="{{ schema }}_{{ PRO_dumpfile }}" content="{{ content }}" schemas="{{ schema }}"
+  shell: expdp "{{ user }}"/"{{ PRO_password }}"@"{{ PRO_service_name }}" directory="{{ PRO_dpump_dir }}" dumpfile="{{ schema }}_{{ PRO_dumpfile }}" content="{{ content }}" schemas="{{ schema }}" exclude=STATISTICS,DB_LINK
   environment: "{{ oracle_env }}"
 
 - name: "Fetching file"
